--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "@trendyol-js/react-carousel": "^3.0.0",
+    "braintree-web-drop-in-react": "^1.2.1",
     "env": "^0.0.2",
     "jquery": "^3.6.0",
     "jquery-ui": "^1.13.2",
@@ -23,6 +24,7 @@
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "react-slick": "^0.29.0",
+    "react-stripe-checkout": "^2.6.3",
     "reactstrap": "^9.1.3",
     "slick-carousel": "^1.8.1",
     "web-vitals": "^2.1.4"
