--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "query-string": "^7.1.1",
     "querystring": "^0.2.1",
     "react": "^18.1.0",
+    "react-bootstrap": "^2.5.0",
     "react-dom": "^18.1.0",
     "react-helmet": "^6.1.0",
     "react-responsive-carousel": "^3.2.23",
