--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@trendyol-js/react-carousel": "^3.0.0",
     "braintree-web-drop-in-react": "^1.2.1",
     "env": "^0.0.2",
+    "font-awesome": "^4.7.0",
     "jquery": "^3.6.0",
     "jquery-ui": "^1.13.2",
     "moment": "^2.29.4",
